# Gymnasie-Projekt

./: .gitignore  Brainstorming  Makefile.am  README.md  Struktur  Tekniskt  configure.ac  gui.fsh  gui.vsh  shader.fsh  shader.vsh  shield.fsh  shield.vsh  windows.bat
Planer/: Mathias Johansson Gymnasiearbetesrapport.tex  Menyer  Projektplan.odt  Rapport.tex  Struktur  Tekniskt
include/stb/: LICENSE
res/: Abstract Box.xcf  Blaster.xcf  Crosshair.xcf  Plane.dae  Plasma.xcf  Rockets  Shield.blend  Shield.dae  Sphere.dae  billboard.dae  blaster.dae  cube.dae  diamond-crosshair.xcf  square-crosshair.xcf  unit-plane.dae
res/Cubemap 1/: Cubemap.blend  Cubemap.blend1
res/Ship/: Color.dae  Ship.blend  Ship.blend1  Ship.dae
src/: def.c  def.h  g_ai.c  g_ai.h  g_level.c  g_level.h  g_main.c  g_main.h  gui_components.c  gui_main.c  gui_main.h  s_main.c  s_main.h  sys_input.c  sys_input.h  sys_main.c  sys_main.h  v_main.c  v_main.h  v_opengl.c  v_opengl.h
